# gridpool-ckpool-adapter

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
config/: example.toml
deploy/: gridpool-ckpool-adapter.service  gridpool-ckpool-adapter.user.service
src/: lib.rs  main.rs
