[package]
name = "gridpool-ckpool-adapter"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Local reliability and IPC adapter between CKPool-compatible SV1 servers and GridPool"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
eventsource-stream = "0.2"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
